--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 
     </head>
     <body>
-        <div class="navbar">
-            <a href="#" class="active">jb rooney</a>
-            <a href="#">itch.io</a>
-            <a href="#">github</a>
-            <a href="#">bandcamp</a>
-            <a href="#">contact</a>
-            <a href="#" class="right">cart</a>
-        </div>
-
+        <section>
+            <header>
+                <nav class="navbar" id="navbar">
+                    <a href="#" class="logo">
+                        <img src="images/jbrooney.png" alt="Logo">
+                    </a>
+                    <a href="#">itch.io</a>
+                    <a href="#">bandcamp</a>
+                    <a href="#">blog</a>
+                    <a href="#">contact</a>
+                </nav>
+            </header>
+        </section>
     </body>
 </html>
-
-
