added images and created gitignore for .ds_store files

--- a/index.html
+++ b/index.html
@@ -8,16 +8,45 @@
 <body>
     <section>
         <header>
+            <a href="#" class="logo">
+                <img src="images/jbrooney.png" alt="Logo">
+            </a>
             <nav class="navbar" id="navbar">
-                <a href="#" class="logo">
-                    <img src="images/jbrooney.png" alt="Logo">
-                </a>
                 <a href="#">itch.io</a>
                 <a href="#">bandcamp</a>
                 <a href="#">blog</a>
                 <a href="#">contact</a>
             </nav>
         </header>
+    </section>
+    <section>
+        <div class="row">
+            <div class="column">
+                <a href="#1">
+                    <img src="images/img1.png">
+                </a>
+            </div>
+            <div class="column">
+                <a href="#2">
+                    <img src="images/img2.png">
+                </a>
+            </div>
+            <div class="column">
+                <a href="#3">
+                    <img src="images/img3.png">
+                </a>
+            </div>
+            <div class="column">
+                <a href="#4">
+                    <img src="images/img4.png">
+                </a>
+            </div>
+            <div class="column">
+                <a href="#5">
+                    <img src="images/img5.png">
+                </a>
+            </div>
+        </div>
     </section>
 </body>
 </html>
